client/logs/start.log
=== AILinux Startup Log - 2025-03-02T00:24:08.889Z ===
2025-03-02T00:24:08.894Z - Logging system initialized
2025-03-02T00:24:08.894Z - Running in LOCAL mode - connecting to localhost
2025-03-02T00:24:08.894Z - Configuration: Flask=localhost:8081, WebSocket=ws://localhost:8082
2025-03-02T00:24:08.894Z - API Keys: OpenAI=SET, Gemini=SET, HuggingFace=SET
2025-03-02T00:24:08.894Z - Using Python interpreter: /home/zombie/client/bin/python3
2025-03-02T00:24:08.895Z - Checking Python environment...
2025-03-02T00:24:08.950Z - Flask check error: Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/home/zombie/client/lib/python3.12/site-packages/flask/__init__.py", line 5, in <module>
2025-03-02T00:24:08.951Z - Flask check error: from . import json as json
  File "/home/zombie/client/lib/python3.12/site-packages/flask/json/__init__.py", line 7, in <module>
    from .provider import _default
  File "/home/zombie/client/lib/python3.12/site-packages/flask/json/provider.py", line 7, in <module>
    import uuid
  File "/home/zombie/client/lib/python3.12/site-packages/uuid.py", line 138
    if not 0 <= time_low < 1<<32L:
                               ^
SyntaxError: invalid decimal literal
2025-03-02T00:24:08.959Z - ERROR: Flask module not found. Please install the required dependencies.
2025-03-02T00:24:08.959Z - Startup error: Flask module not found. Please install the required dependencies.
